<resources>
    <string name="app_name">bPlanner</string>
    <string name="settings_title">Settings</string>

    <string name="quick_task_title"
        translatable="false">Quick task</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="pref_tomorrow_tasks_notification_key">tomorrow_tasks_notification_preference</string>
    <string name="pref_tomorrow_tasks_notification_message">Create tasks for tomorrow</string>

    <string name="pref_unfinished_quick_tasks_key">unfinished_quick_tasks_preference</string>
    <string name="pref_unfinished_quick_tasks_message">You have unfinished quick tasks</string>

    <string name="pref_areas_sort_label"
        translatable="false">Areas sorting</string>

    <string name="pref_areas_sort_label_by_date"
        translatable="false">Date</string>

    <string name="pref_areas_sort_label_by_tasks"
        translatable="false">Undone tasks</string>

    <string name="pref_areas_sort_key"
        translatable="false">areas_sort_by</string>

    <string name="pref_areas_sort_by_date"
        translatable="false">by_date</string>

    <string name="pref_areas_sort_by_tasks"
        translatable="false">by_undone_tasks</string>

    <string name="pref_google_authorization_key">is_authorization_enabled</string>
    <!--<string name="google_authorization_title">Auto Sign In with Google</string>-->

    <string name="pref_sign_in_key">sign_in</string>

    <string name="pref_category_google_services">google_services_category</string>

    <string name="pref_export_key">export</string>

    <string name="pref_category_data">data_category</string>

    <string name="pref_category_notifications">notifications_category</string>

    <string name="pref_category_calendar">calendar_category</string>

</resources>
