<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2016 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

    <PreferenceCategory
        android:title="Notifications"
        android:key="@string/pref_category_notifications">

        <SwitchPreferenceCompat
            android:key="@string/pref_tomorrow_tasks_notification_key"
            android:title="Tomorrow tasks"
            android:summary="Remind me to set tasks for tomorrow"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Calendar"
        android:key="@string/pref_category_calendar">

        <ListPreference
            android:defaultValue="@string/pref_areas_sort_by_tasks"
            android:entries="@array/pref_areas_sort_options"
            android:entryValues="@array/pref_areas_sort_values"
            android:key="@string/pref_areas_sort_key"
            android:title="@string/pref_areas_sort_label" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Google services"
        android:key="@string/pref_category_google_services">

        <SwitchPreferenceCompat
            android:key="@string/pref_google_authorization_key"
            android:title="Auto Sign In with Google"
            android:defaultValue="true" />

        <Preference
            android:title="Sign In"
            android:key="@string/pref_sign_in_key"
            android:summary="Click to sign in"/>

    </PreferenceCategory>

</PreferenceScreen>